--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -98,7 +98,7 @@
           <li><a href="https://archiloque.net/blog">Blog</a></li>
           <li><a href="https://archiloque.net/weekly">Chosen Links</a></li>
           <li><a href="https://tinyletter.com/archiloque">Newsletter</a></li>
-          <li><a href="https://twitter.com/archiloque">Twitter</a></li>
+          <li><a href="http://mastodon.social/@archiloque">Mastodon</a></li>
         </ul>
     </nav>
 
